--- a/notebooks/analysis.ipynb
+++ b/notebooks/analysis.ipynb
@@ -20,10 +20,8 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
-    "\n",
-    "# All file paths\n",
-    "RAW_TRAIN_PATH = \"../data/train/raw_train.csv\"\n",
-    "RAW_TEST_PATH = \"../data/test/raw_test.csv\""
+    "import pickle\n",
+    "import utils"
    ]
   },
   {
@@ -42,8 +40,8 @@
    "outputs": [],
    "source": [
     "# Load raw data\n",
-    "raw_train_df = pd.read_csv(RAW_TRAIN_PATH, dtype={\"accession\": str, \"score\": float})\n",
-    "raw_test_df = pd.read_csv(RAW_TEST_PATH, dtype={\"accession\": str, \"score\": float})"
+    "raw_train_df = pd.read_csv(utils.RAW_TRAIN_PATH, dtype={\"accession\": str, \"score\": float})\n",
+    "raw_test_df = pd.read_csv(utils.RAW_TEST_PATH, dtype={\"accession\": str, \"score\": float})"
    ]
   },
   {
