utils and retrieval todo

--- a/notebooks/retrieval.ipynb
+++ b/notebooks/retrieval.ipynb
@@ -29,14 +29,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "known_map: dict[str, str] = {}\n",
+    "# Ensembl Protein ID to Sequence mapping\n",
+    "train_ensp_sequence_map: dict[str, str] = {}\n",
+    "test_ensp_sequence_map: dict[str, str] = {}\n",
+    "\n",
     "train_ensp_series: pd.Series = pd.read_csv(utils.RAW_TRAIN_PATH, usecols=[\"ensp\"], dtype={\"ensp\": str})[\"ensp\"]\n",
     "test_ensp_series: pd.Series = pd.read_csv(utils.RAW_TEST_PATH, usecols=[\"ensp\"], dtype={\"ensp\": str})[\"ensp\"]\n",
     "\n",
-    "train_sequence_series: pd.Series = train_ensp_series.apply(lambda ensp: utils.get_full_sequence(ensp, known_map))\n",
-    "test_sequence_series: pd.Series = test_ensp_series.apply(lambda ensp: utils.get_full_sequence(ensp, known_map))\n",
+    "train_sequence_series: pd.Series = train_ensp_series.apply(lambda ensp: utils.get_full_sequence(ensp, train_ensp_sequence_map))\n",
+    "test_sequence_series: pd.Series = test_ensp_series.apply(lambda ensp: utils.get_full_sequence(ensp, test_ensp_sequence_map))\n",
     "\n",
-    "print(known_map)"
+    "# Save the mappings using pickle\n",
+    "# TODO: save pickle files to utils.TRAIN_ENSP_SEQUENCE_MAP_PATH and utils.TEST_ENSP_SEQUENCE_MAP_PATH"
    ]
   },
   {
