accidentally worked in main branch instead of retrieval

--- a/notebooks/retrieval.ipynb
+++ b/notebooks/retrieval.ipynb
@@ -23,6 +23,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8f7446a7",
+   "metadata": {},
+   "source": [
+    "## Data retrieved from the Ensembl API"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "9d0e7f97",
@@ -50,7 +58,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: retrieve more data and save to pickle files"
+    "# Ensembl Variant Effect Predictor (VEP)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0591e7f0",
+   "metadata": {},
+   "source": [
+    "## Data retrieved from the MaveDB API"
    ]
   }
  ],
