--- a/notebooks/retrieval.ipynb
+++ b/notebooks/retrieval.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "9d0e7f97",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "0add2a34",
    "metadata": {},
    "outputs": [],
@@ -87,55 +87,33 @@
     "# Ensembl Variant Effect Predictor (VEP)\n",
     "train_vep_data: list[dict] = []\n",
     "with open(\"../data/train/train_vep.pkl\", \"rb\") as f:\n",
-    "    num_batches: int = 0\n",
     "    while True:\n",
     "        try:\n",
-    "            batch: list[dict] = pickle.load(f)\n",
-    "            for item in batch:\n",
-    "                train_vep_data.append(item)\n",
-    "            num_batches += 1\n",
-    "            # if (num_batches == 1588):\n",
-    "            #     break\n",
+    "            train_vep_data.append(pickle.load(f))\n",
     "        except EOFError:\n",
     "            break\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "fcf394a2",
+   "execution_count": 6,
+   "id": "1c65f9e7",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "------\n",
-      "178554\n"
+      "178554\n",
+      "dict_keys(['seq_region_name', 'input', 'assembly_name', 'allele_string', 'strand', 'transcript_consequences', 'most_severe_consequence', 'end', 'start', 'colocated_variants', 'id'])\n",
+      "frameshift_variant\n"
      ]
     }
    ],
    "source": [
-    "i = 0\n",
-    "for item in train_vep_data:\n",
-    "    if item.get(\"transcript_consequences\", None) is None:\n",
-    "        print(i)\n",
-    "    i += 1\n",
-    "\n",
-    "print(\"------\")\n",
-    "print(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "03cd18ef",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(\"../data/train/train_vep_full.pkl\", \"ab\") as f:\n",
-    "    for item in train_vep_data:\n",
-    "        pickle.dump(item, f)"
+    "print(len(train_vep_data))\n",
+    "print(train_vep_data[0].keys())\n",
+    "print(train_vep_data[0][\"most_severe_consequence\"])"
    ]
   },
   {
