example usage of vep data

--- a/notebooks/retrieval.ipynb
+++ b/notebooks/retrieval.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "9d0e7f97",
    "metadata": {},
    "outputs": [],
@@ -85,18 +85,12 @@
    "outputs": [],
    "source": [
     "# Ensembl Variant Effect Predictor (VEP)\n",
-    "train_vep_data: list[dict] = []\n",
-    "with open(\"../data/train/train_vep.pkl\", \"rb\") as f:\n",
-    "    while True:\n",
-    "        try:\n",
-    "            train_vep_data.append(pickle.load(f))\n",
-    "        except EOFError:\n",
-    "            break\n"
+    "train_vep_data: list[dict] = utils.vep_from_pickle(utils.TRAIN_VEP_DATA_PATH)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "1c65f9e7",
    "metadata": {},
    "outputs": [
@@ -106,14 +100,26 @@
      "text": [
       "178554\n",
       "dict_keys(['seq_region_name', 'input', 'assembly_name', 'allele_string', 'strand', 'transcript_consequences', 'most_severe_consequence', 'end', 'start', 'colocated_variants', 'id'])\n",
-      "frameshift_variant\n"
+      "frameshift_variant\n",
+      "dict_keys(['cdna_end', 'consequence_terms', 'cdna_start', 'impact', 'strand', 'cds_start', 'amino_acids', 'transcript_id', 'hgnc_id', 'gene_symbol_source', 'cds_end', 'protein_start', 'variant_allele', 'gene_symbol', 'gene_id', 'protein_end', 'codons', 'biotype'])\n",
+      "{'seq_region_name': 'X', 'input': 'X:g.15594962..15594964delinsTTA', 'assembly_name': 'GRCh38', 'allele_string': 'C/TTA', 'strand': 1, 'transcript_consequences': [{'cdna_end': 277, 'consequence_terms': ['frameshift_variant'], 'cdna_start': 277, 'impact': 'HIGH', 'strand': -1, 'cds_start': 228, 'amino_acids': 'Q/HX', 'transcript_id': 'ENST00000252519', 'hgnc_id': 'HGNC:13557', 'gene_symbol_source': 'HGNC', 'cds_end': 228, 'protein_start': 76, 'variant_allele': 'TTA', 'gene_symbol': 'ACE2', 'gene_id': 'ENSG00000130234', 'protein_end': 76, 'codons': 'caG/caTAA', 'biotype': 'protein_coding'}, {'codons': 'caG/caTAA', 'biotype': 'protein_coding', 'protein_end': 76, 'protein_start': 76, 'cds_end': 228, 'variant_allele': 'TTA', 'gene_symbol': 'ACE2', 'gene_id': 'ENSG00000130234', 'hgnc_id': 'HGNC:13557', 'gene_symbol_source': 'HGNC', 'amino_acids': 'Q/HX', 'transcript_id': 'ENST00000427411', 'impact': 'HIGH', 'strand': -1, 'cds_start': 228, 'cdna_start': 531, 'consequence_terms': ['frameshift_variant'], 'cdna_end': 531}, {'consequence_terms': ['frameshift_variant'], 'cdna_end': 277, 'cdna_start': 277, 'amino_acids': 'Q/HX', 'transcript_id': 'ENST00000678046', 'impact': 'HIGH', 'strand': -1, 'cds_start': 228, 'protein_start': 76, 'cds_end': 228, 'variant_allele': 'TTA', 'gene_symbol': 'ACE2', 'gene_id': 'ENSG00000130234', 'hgnc_id': 'HGNC:13557', 'gene_symbol_source': 'HGNC', 'codons': 'caG/caTAA', 'biotype': 'protein_coding', 'protein_end': 76}, {'gene_symbol_source': 'HGNC', 'hgnc_id': 'HGNC:13557', 'gene_symbol': 'ACE2', 'gene_id': 'ENSG00000130234', 'protein_start': 76, 'cds_end': 228, 'variant_allele': 'TTA', 'protein_end': 76, 'biotype': 'protein_coding', 'codons': 'caG/caTAA', 'cdna_end': 431, 'consequence_terms': ['frameshift_variant'], 'cdna_start': 431, 'strand': -1, 'cds_start': 228, 'impact': 'HIGH', 'transcript_id': 'ENST00000678073', 'amino_acids': 'Q/HX'}, {'protein_end': 76, 'biotype': 'protein_coding', 'codons': 'caG/caTAA', 'gene_symbol_source': 'HGNC', 'hgnc_id': 'HGNC:13557', 'gene_id': 'ENSG00000130234', 'gene_symbol': 'ACE2', 'variant_allele': 'TTA', 'cds_end': 228, 'protein_start': 76, 'cds_start': 228, 'strand': -1, 'impact': 'HIGH', 'transcript_id': 'ENST00000679162', 'amino_acids': 'Q/HX', 'consequence_terms': ['frameshift_variant'], 'cdna_end': 277, 'cdna_start': 277}, {'strand': -1, 'cds_start': 228, 'impact': 'HIGH', 'transcript_id': 'ENST00000679212', 'amino_acids': 'Q/HX', 'consequence_terms': ['frameshift_variant'], 'cdna_start': 277, 'cdna_end': 277, 'protein_end': 76, 'biotype': 'protein_coding', 'codons': 'caG/caTAA', 'gene_symbol_source': 'HGNC', 'hgnc_id': 'HGNC:13557', 'gene_symbol': 'ACE2', 'gene_id': 'ENSG00000130234', 'protein_start': 76, 'cds_end': 228, 'variant_allele': 'TTA'}, {'codons': 'caG/caTAA', 'biotype': 'protein_coding', 'protein_end': 76, 'variant_allele': 'TTA', 'protein_start': 76, 'cds_end': 228, 'gene_symbol': 'ACE2', 'gene_id': 'ENSG00000130234', 'hgnc_id': 'HGNC:13557', 'gene_symbol_source': 'HGNC', 'amino_acids': 'Q/HX', 'transcript_id': 'ENST00000679278', 'impact': 'HIGH', 'cds_start': 228, 'strand': -1, 'consequence_terms': ['frameshift_variant'], 'cdna_start': 277, 'cdna_end': 277}, {'amino_acids': 'Q/HX', 'transcript_id': 'ENST00000680121', 'impact': 'HIGH', 'strand': -1, 'cds_start': 228, 'consequence_terms': ['frameshift_variant'], 'cdna_end': 357, 'cdna_start': 357, 'codons': 'caG/caTAA', 'biotype': 'protein_coding', 'protein_end': 76, 'protein_start': 76, 'cds_end': 228, 'variant_allele': 'TTA', 'gene_symbol': 'ACE2', 'gene_id': 'ENSG00000130234', 'hgnc_id': 'HGNC:13557', 'gene_symbol_source': 'HGNC'}, {'impact': 'HIGH', 'cds_start': 228, 'strand': -1, 'amino_acids': 'Q/HX', 'transcript_id': 'ENST00000871928', 'consequence_terms': ['frameshift_variant'], 'cdna_start': 297, 'cdna_end': 297, 'protein_end': 76, 'codons': 'caG/caTAA', 'biotype': 'protein_coding', 'hgnc_id': 'HGNC:13557', 'gene_symbol_source': 'HGNC', 'variant_allele': 'TTA', 'protein_start': 76, 'cds_end': 228, 'gene_symbol': 'ACE2', 'gene_id': 'ENSG00000130234'}, {'biotype': 'protein_coding', 'codons': 'caG/caTAA', 'protein_end': 76, 'gene_symbol': 'ACE2', 'gene_id': 'ENSG00000130234', 'protein_start': 76, 'cds_end': 228, 'variant_allele': 'TTA', 'gene_symbol_source': 'HGNC', 'hgnc_id': 'HGNC:13557', 'transcript_id': 'ENST00000871929', 'amino_acids': 'Q/HX', 'strand': -1, 'cds_start': 228, 'impact': 'HIGH', 'consequence_terms': ['frameshift_variant'], 'cdna_end': 262, 'cdna_start': 262}, {'consequence_terms': ['frameshift_variant'], 'cdna_end': 262, 'cdna_start': 262, 'cds_start': 228, 'strand': -1, 'impact': 'HIGH', 'transcript_id': 'ENST00000871930', 'amino_acids': 'Q/HX', 'gene_symbol_source': 'HGNC', 'hgnc_id': 'HGNC:13557', 'gene_id': 'ENSG00000130234', 'gene_symbol': 'ACE2', 'variant_allele': 'TTA', 'protein_start': 76, 'cds_end': 228, 'protein_end': 76, 'biotype': 'protein_coding', 'codons': 'caG/caTAA'}, {'cds_start': 228, 'strand': -1, 'impact': 'HIGH', 'transcript_id': 'ENST00000871931', 'amino_acids': 'Q/HX', 'cdna_end': 262, 'consequence_terms': ['frameshift_variant'], 'cdna_start': 262, 'protein_end': 76, 'biotype': 'protein_coding', 'codons': 'caG/caTAA', 'gene_symbol_source': 'HGNC', 'hgnc_id': 'HGNC:13557', 'gene_symbol': 'ACE2', 'gene_id': 'ENSG00000130234', 'variant_allele': 'TTA', 'protein_start': 76, 'cds_end': 228}, {'amino_acids': 'Q/HX', 'transcript_id': 'ENST00000954330', 'impact': 'HIGH', 'cds_start': 228, 'strand': -1, 'cdna_start': 438, 'consequence_terms': ['frameshift_variant'], 'cdna_end': 438, 'codons': 'caG/caTAA', 'biotype': 'protein_coding', 'protein_end': 76, 'variant_allele': 'TTA', 'cds_end': 228, 'protein_start': 76, 'gene_symbol': 'ACE2', 'gene_id': 'ENSG00000130234', 'hgnc_id': 'HGNC:13557', 'gene_symbol_source': 'HGNC'}, {'cdna_end': 308, 'consequence_terms': ['frameshift_variant'], 'cdna_start': 308, 'impact': 'HIGH', 'cds_start': 228, 'strand': -1, 'amino_acids': 'Q/HX', 'transcript_id': 'ENST00000954331', 'hgnc_id': 'HGNC:13557', 'gene_symbol_source': 'HGNC', 'variant_allele': 'TTA', 'protein_start': 76, 'cds_end': 228, 'gene_symbol': 'ACE2', 'gene_id': 'ENSG00000130234', 'protein_end': 76, 'codons': 'caG/caTAA', 'biotype': 'protein_coding'}], 'most_severe_consequence': 'frameshift_variant', 'end': 15594962, 'start': 15594962, 'colocated_variants': [{'somatic': 1, 'phenotype_or_disease': 1, 'id': 'COSV99383008', 'end': 15594962, 'seq_region_name': 'X', 'var_synonyms': {'COSMIC': ['COSM8630049']}, 'allele_string': 'COSMIC_MUTATION', 'strand': 1, 'start': 15594962}], 'id': 'X:g.15594962..15594964delinsTTA'}\n",
+      "{'frameshift_variant', 'inframe_insertion', 'stop_gained', 'splice_acceptor_variant', 'splice_donor_variant', '5_prime_UTR_variant'}\n"
      ]
     }
    ],
    "source": [
+    "# Example usage of VEP data\n",
+    "# NOTE: \"strand\" is always 1. To get actual strand, use [\"transcript_consequences\"][0][\"strand\"]\n",
     "print(len(train_vep_data))\n",
     "print(train_vep_data[0].keys())\n",
-    "print(train_vep_data[0][\"most_severe_consequence\"])"
+    "print(train_vep_data[0][\"most_severe_consequence\"])\n",
+    "print(train_vep_data[0][\"transcript_consequences\"][0].keys())\n",
+    "print(train_vep_data[0])\n",
+    "# Print all unique variant types in the VEP data\n",
+    "variant_types: set[str] = set()\n",
+    "for row in train_vep_data:\n",
+    "    variant_types.add(row.get(\"most_severe_consequence\", \"error\"))\n",
+    "print(variant_types)"
    ]
   },
   {
