ems train embeddings

--- a/notebooks/retrieval.ipynb
+++ b/notebooks/retrieval.ipynb
@@ -18,6 +18,8 @@
    "source": [
     "# All imports\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
+    "import torch\n",
     "import pickle\n",
     "from pathlib import Path\n",
     "import utils"
@@ -33,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "9d0e7f97",
    "metadata": {},
    "outputs": [],
@@ -79,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "0add2a34",
    "metadata": {},
    "outputs": [],
@@ -93,25 +95,7 @@
    "execution_count": null,
    "id": "1c65f9e7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "178554\n",
-      "dict_keys(['seq_region_name', 'input', 'assembly_name', 'allele_string', 'strand', 'transcript_consequences', 'most_severe_consequence', 'end', 'start', 'colocated_variants', 'id'])\n",
-      "frameshift_variant\n",
-      "HIGH\n",
-      "protein_coding\n",
-      "['frameshift_variant']\n",
-      "-1\n",
-      "{'frameshift_variant', 'inframe_insertion', 'stop_gained', 'splice_acceptor_variant', 'splice_donor_variant', '5_prime_UTR_variant'}\n",
-      "{'MODERATE', 'HIGH', 'MODIFIER', 'LOW'}\n",
-      "{'lncRNA', 'protein_coding_CDS_not_defined', 'nonsense_mediated_decay', 'protein_coding', 'TEC'}\n",
-      "['frameshift_variant', 'splice_region_variant', 'upstream_gene_variant', 'stop_gained', '3_prime_UTR_variant', 'inframe_insertion', 'stop_retained_variant', 'downstream_gene_variant', 'intron_variant', 'non_coding_transcript_variant', 'start_lost', 'start_retained_variant', 'stop_lost', '5_prime_UTR_variant', 'non_coding_transcript_exon_variant', 'NMD_transcript_variant', 'splice_acceptor_variant', 'splice_donor_variant', 'splice_polypyrimidine_tract_variant', 'splice_donor_5th_base_variant', 'splice_donor_region_variant', 'incomplete_terminal_codon_variant', 'coding_sequence_variant']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Example usage of VEP data\n",
     "# NOTE: \"strand\" is always 1. To get actual strand, use [\"transcript_consequences\"][0][\"strand\"]\n",
@@ -148,6 +132,211 @@
    "metadata": {},
    "source": [
     "## Data retrieved from the MaveDB API"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e8e1615",
+   "metadata": {},
+   "source": [
+    "# Embeddings from ESM C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "209e9bad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_ensp_sequence_map = utils.pickle_to_dict(utils.TRAIN_ENSP_SEQUENCE_MAP_PATH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "2e94e375",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/isaac/Documents/GitHub/mlm25_mavedb/.venv/lib/python3.13/site-packages/esm/utils/misc.py:275: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.detach().clone() or sourceTensor.detach().clone().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  return torch.tensor(x)\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_ensp_embeddings_map: dict[str, torch.Tensor] = {}\n",
+    "for ensp, seq in train_ensp_sequence_map.items():\n",
+    "    train_ensp_embeddings_map[ensp] = utils.get_embedding(seq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "ffb7303d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "136\n",
+      "ENSP00000252519.3 torch.Size([805, 1152])\n",
+      "ENSP00000378426.2 torch.Size([163, 1152])\n",
+      "ENSP00000478114.2 torch.Size([1863, 1152])\n",
+      "ENSP00000155840.2 torch.Size([676, 1152])\n",
+      "ENSP00000262916.6 torch.Size([695, 1152])\n",
+      "ENSP00000381803.3 torch.Size([360, 1152])\n",
+      "ENSP00000229335.6 torch.Size([198, 1152])\n",
+      "ENSP00000509238.1 torch.Size([188, 1152])\n",
+      "ENSP00000370839.6 torch.Size([318, 1152])\n",
+      "ENSP00000352035.2 torch.Size([872, 1152])\n",
+      "ENSP00000315417.3 torch.Size([326, 1152])\n",
+      "ENSP00000498217.1 torch.Size([411, 1152])\n",
+      "ENSP00000368332.4 torch.Size([562, 1152])\n",
+      "ENSP00000419199.1 torch.Size([587, 1152])\n",
+      "ENSP00000284629.2 torch.Size([475, 1152])\n",
+      "ENSP00000257861.3 torch.Size([819, 1152])\n",
+      "ENSP00000358081.4 torch.Size([575, 1152])\n",
+      "ENSP00000338814.5 torch.Size([447, 1152])\n",
+      "ENSP00000494522.3 torch.Size([505, 1152])\n",
+      "ENSP00000419081.2 torch.Size([153, 1152])\n",
+      "ENSP00000380256.4 torch.Size([786, 1152])\n",
+      "ENSP00000352264.5 torch.Size([639, 1152])\n",
+      "ENSP00000392028.1 torch.Size([2997, 1152])\n",
+      "ENSP00000493738.1 torch.Size([219, 1152])\n",
+      "ENSP00000311083.5 torch.Size([79, 1152])\n",
+      "ENSP00000221996.5 torch.Size([299, 1152])\n",
+      "ENSP00000225387.3 torch.Size([215, 1152])\n",
+      "ENSP00000346805.3 torch.Size([196, 1152])\n",
+      "ENSP00000497249.1 torch.Size([252, 1152])\n",
+      "ENSP00000381273.2 torch.Size([205, 1152])\n",
+      "ENSP00000302105.4 torch.Size([174, 1152])\n",
+      "ENSP00000260988.4 torch.Size([175, 1152])\n",
+      "ENSP00000496418.1 torch.Size([174, 1152])\n",
+      "ENSP00000496652.1 torch.Size([174, 1152])\n",
+      "ENSP00000312099.5 torch.Size([178, 1152])\n",
+      "ENSP00000261726.6 torch.Size([1486, 1152])\n",
+      "ENSP00000353132.3 torch.Size([377, 1152])\n",
+      "ENSP00000307197.4 torch.Size([309, 1152])\n",
+      "ENSP00000366179.3 torch.Size([554, 1152])\n",
+      "ENSP00000315659.4 torch.Size([1577, 1152])\n",
+      "ENSP00000419599.1 torch.Size([82, 1152])\n",
+      "ENSP00000356253.5 torch.Size([371, 1152])\n",
+      "ENSP00000467264.1 torch.Size([83, 1152])\n",
+      "ENSP00000301838.5 torch.Size([208, 1152])\n",
+      "ENSP00000386633.1 torch.Size([279, 1152])\n",
+      "ENSP00000494562.1 torch.Size([1017, 1152])\n",
+      "ENSP00000318177.9 torch.Size([572, 1152])\n",
+      "ENSP00000382948.3 torch.Size([454, 1152])\n",
+      "ENSP00000399719.1 torch.Size([422, 1152])\n",
+      "ENSP00000500409.1 torch.Size([1499, 1152])\n",
+      "ENSP00000238558.3 torch.Size([257, 1152])\n",
+      "ENSP00000319118.2 torch.Size([304, 1152])\n",
+      "ENSP00000340823.6 torch.Size([249, 1152])\n",
+      "ENSP00000341214.5 torch.Size([207, 1152])\n",
+      "ENSP00000261609.8 torch.Size([2788, 1152])\n",
+      "ENSP00000498190.1 torch.Size([185, 1152])\n",
+      "ENSP00000336856.4 torch.Size([347, 1152])\n",
+      "ENSP00000355140.5 torch.Size([301, 1152])\n",
+      "ENSP00000415433.2 torch.Size([462, 1152])\n",
+      "ENSP00000356846.4 torch.Size([434, 1152])\n",
+      "ENSP00000364361.3 torch.Size([800, 1152])\n",
+      "ENSP00000261537.6 torch.Size([1006, 1152])\n",
+      "ENSP00000309790.4 torch.Size([1132, 1152])\n",
+      "ENSP00000372170.4 torch.Size([303, 1152])\n",
+      "ENSP00000239243.5 torch.Size([267, 1152])\n",
+      "ENSP00000288235.4 torch.Size([1108, 1152])\n",
+      "ENSP00000341021.2 torch.Size([138, 1152])\n",
+      "ENSP00000289473.4 torch.Size([390, 1152])\n",
+      "ENSP00000264596.3 torch.Size([605, 1152])\n",
+      "ENSP00000350815.3 torch.Size([984, 1152])\n",
+      "ENSP00000278780.5 torch.Size([275, 1152])\n",
+      "ENSP00000440945.1 torch.Size([424, 1152])\n",
+      "ENSP00000305556.5 torch.Size([356, 1152])\n",
+      "ENSP00000263666.4 torch.Size([1066, 1152])\n",
+      "ENSP00000362103.2 torch.Size([451, 1152])\n",
+      "ENSP00000329170.5 torch.Size([443, 1152])\n",
+      "ENSP00000355001.2 torch.Size([500, 1152])\n",
+      "ENSP00000495996.1 torch.Size([361, 1152])\n",
+      "ENSP00000366413.4 torch.Size([419, 1152])\n",
+      "ENSP00000281321.3 torch.Size([409, 1152])\n",
+      "ENSP00000495718.1 torch.Size([338, 1152])\n",
+      "ENSP00000391681.2 torch.Size([360, 1152])\n",
+      "ENSP00000406998.2 torch.Size([689, 1152])\n",
+      "ENSP00000315379.6 torch.Size([683, 1152])\n",
+      "ENSP00000432174.2 torch.Size([527, 1152])\n",
+      "ENSP00000283195.6 torch.Size([3224, 1152])\n",
+      "ENSP00000262241.5 torch.Size([485, 1152])\n",
+      "ENSP00000220751.4 torch.Size([540, 1152])\n",
+      "ENSP00000273480.3 torch.Size([113, 1152])\n",
+      "ENSP00000217086.4 torch.Size([1053, 1152])\n",
+      "ENSP00000356437.3 torch.Size([1247, 1152])\n",
+      "ENSP00000289292.7 torch.Size([1493, 1152])\n",
+      "ENSP00000494686.1 torch.Size([284, 1152])\n",
+      "ENSP00000304502.6 torch.Size([291, 1152])\n",
+      "ENSP00000260653.3 torch.Size([332, 1152])\n",
+      "ENSP00000328596.5 torch.Size([246, 1152])\n",
+      "ENSP00000254480.5 torch.Size([1105, 1152])\n",
+      "ENSP00000217381.2 torch.Size([505, 1152])\n",
+      "ENSP00000322568.3 torch.Size([441, 1152])\n",
+      "ENSP00000297316.4 torch.Size([414, 1152])\n",
+      "ENSP00000341815.7 torch.Size([384, 1152])\n",
+      "ENSP00000323588.1 torch.Size([317, 1152])\n",
+      "ENSP00000359567.2 torch.Size([446, 1152])\n",
+      "ENSP00000244745.1 torch.Size([474, 1152])\n",
+      "ENSP00000495214.1 torch.Size([2419, 1152])\n",
+      "ENSP00000517670.1 torch.Size([536, 1152])\n",
+      "ENSP00000372547.1 torch.Size([204, 1152])\n",
+      "ENSP00000311257.4 torch.Size([926, 1152])\n",
+      "ENSP00000357631.4 torch.Size([586, 1152])\n",
+      "ENSP00000254942.3 torch.Size([542, 1152])\n",
+      "ENSP00000361636.3 torch.Size([160, 1152])\n",
+      "ENSP00000361162.5 torch.Size([510, 1152])\n",
+      "ENSP00000299413.5 torch.Size([344, 1152])\n",
+      "ENSP00000516963.1 torch.Size([868, 1152])\n",
+      "ENSP00000347997.2 torch.Size([655, 1152])\n",
+      "ENSP00000382507.2 torch.Size([331, 1152])\n",
+      "ENSP00000239878.4 torch.Size([85, 1152])\n",
+      "ENSP00000368801.3 torch.Size([376, 1152])\n",
+      "ENSP00000265428.4 torch.Size([922, 1152])\n",
+      "ENSP00000361626.3 torch.Size([324, 1152])\n",
+      "ENSP00000499890.1 torch.Size([364, 1152])\n",
+      "ENSP00000257940.2 torch.Size([434, 1152])\n",
+      "ENSP00000520825.1 torch.Size([426, 1152])\n",
+      "ENSP00000413418.2 torch.Size([2572, 1152])\n",
+      "ENSP00000422930.2 torch.Size([519, 1152])\n",
+      "ENSP00000469647.2 torch.Size([326, 1152])\n",
+      "ENSP00000426848.1 torch.Size([1539, 1152])\n",
+      "ENSP00000428821.1 torch.Size([873, 1152])\n",
+      "ENSP00000365514.3 torch.Size([532, 1152])\n",
+      "ENSP00000287538.5 torch.Size([467, 1152])\n",
+      "ENSP00000372324.2 torch.Size([1377, 1152])\n",
+      "ENSP00000337034.4 torch.Size([669, 1152])\n",
+      "ENSP00000420448.1 torch.Size([794, 1152])\n",
+      "ENSP00000309606.2 torch.Size([720, 1152])\n",
+      "ENSP00000366153.1 torch.Size([661, 1152])\n",
+      "ENSP00000218099.2 torch.Size([461, 1152])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(train_ensp_embeddings_map))\n",
+    "for ensp in train_ensp_embeddings_map:\n",
+    "    print(ensp, train_ensp_embeddings_map[ensp].shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "9887d21e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "utils.dict_to_pickle(train_ensp_embeddings_map, utils.TRAIN_ENSP_EMBEDDINGS_MAP_PATH)"
    ]
   }
  ],
