train and test data have the same ensp codes

--- a/notebooks/retrieval.ipynb
+++ b/notebooks/retrieval.ipynb
@@ -149,7 +149,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_ensp_sequence_map = utils.pickle_to_dict(utils.TRAIN_ENSP_SEQUENCE_MAP_PATH)"
+    "train_ensp_sequence_map = utils.pickle_to_dict(utils.TRAIN_ENSP_SEQUENCE_MAP_PATH)\n",
+    "test_ensp_sequence_map = utils.pickle_to_dict(utils.TEST_ENSP_SEQUENCE_MAP_PATH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "8b483d21",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of sequences in test set not in train set: 0\n",
+      "Number of sequences in train set not in test set: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find elements in test_ensp_sequence_map not in train_ensp_sequence_map\n",
+    "missing_in_train = {k: v for k, v in test_ensp_sequence_map.items() if k not in train_ensp_sequence_map}\n",
+    "print(f\"Number of sequences in test set not in train set: {len(missing_in_train)}\")\n",
+    "\n",
+    "# Find elements in train_ensp_sequence_map not in test_ensp_sequence_map\n",
+    "missing_in_test = {k: v for k, v in train_ensp_sequence_map.items() if k not in test_ensp_sequence_map}\n",
+    "print(f\"Number of sequences in train set not in test set: {len(missing_in_test)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef465984",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find ENSPs in test set that are not in train set\n",
+    "missing_in_train = {k: v for k, v in test_ensp_sequence_map.items() if k not in train_ensp_sequence_map}\n",
+    "print(f\"Number of sequences in test set not in train set: {len(missing_in_train)}\")\n",
+    "\n",
+    "# Find ENSPs in train set that are not in test set\n",
+    "missing_in_test = {k: v for k, v in train_ensp_sequence_map.items() if k not in test_ensp_sequence_map}\n",
+    "print(f\"Number of sequences in train set not in test set: {len(missing_in_test)}\")"
    ]
   },
   {
